<resources>
    <string name="app_name">LexurTimeManager</string>
    <string name="tv_task_name">Task Name</string>
    <string name="tv_task_description">Task Description</string>
    <string name="task">Task</string>
    <string name="summary">Summary</string>
    <string name="profile">profile</string>
    <string name="menu_add">Add Task</string>
    <string name="menu_clear">Clear All Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="clear_tasks">Clear Tasks</string>
    <string name="show_description">Show Descrption</string>
    <string name="title">title</string>
    <string name="title_input_hint">Please input title</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="ok">Ok</string>


    <!-- 提示语 -->
    <string name="title_error">Please input title</string>
    <string name="set_time">set time</string>
    <string name="none">none</string>
    <string name="arrow_right">arrow right</string>
    <string name="image">image</string>
    <string name="select_date">click and choose date</string>
    <string name="select_time">click and choose time</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="label">Label</string>
    <string name="label_input_hint">Enter labels separated by “,”</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">number:</string>
    <string name="delete">Delete</string>
    <string name="label_name">Label Name:</string>
    <string name="color">Color:</string>
    <string name="input_label_name">Input Label Name</string>
    <string name="select_color">Select color</string>
    <string name="task_type">task type</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time">Stop Time</string>
    <string name="status">status</string>
    <string name="select_start_time">select start time</string>
    <string name="select_stop_time">select stop time</string>
    <string name="archive">Archive</string>
    <string name="other">other</string>
    <string name="legend">legend</string>
    <string name="task_status">task status</string>
    <string name="task_label">task label</string>
    <string name="barchat_task_status">task status barchart</string>

</resources>